# reach-ambiguity-rocq

./: .gitignore  LICENSE  Makefile  README.md  _CoqProject  dune  dune-project  position-automata.opam
cpp_implementation/: .gitignore  CMakeLists.txt  Completment_Main.cpp  GREWIA.cpp  IntersectionK.cpp  Match.cpp  PositionTest.cpp  Readme.md  main.cpp
cpp_implementation/Datasets/: basic.txt  corpus_snort_regexlib_regex101_unique.txt  pcre_hunter_better.txt  perl_hunter_better(1).txt  perl_hunter_better.txt  regexlib.txt
cpp_implementation/JSMatch/: match.js
cpp_implementation/JavaMatch/src/: Main.java
cpp_implementation/Membership/: CMakeLists.txt  FULLMATCH.cpp  MatchFunctions.h
cpp_implementation/PCRE2/: PCREMatch  PCREMatch.cpp
cpp_implementation/Parser/: CMakeLists.txt  parser.cpp  parser.h  parserLargeUnicode.cpp
cpp_implementation/PerlMatch/: benchmark.pl
cpp_implementation/PythonMatch/: match.py
cpp_implementation/Solver/: CMakeLists.txt  solver.cpp  solver.h  solver_export.h  solver_kind.h  solver_proof_rule.h  solver_types.h
cpp_implementation/Solver/DetectAmbiguity/: DetectAmbiguity.cpp  DetectAmbiguity.h
cpp_implementation/Solver/DetectAmbiguity_WithLookAround/: ComputeFiniteAmbiguity.cpp  DetectAmbiguity.cpp  DetectAmbiguity.h
cpp_implementation/Solver/PositionAutomaton/: Completment.cpp  DFA.cpp  Intersectiontest.cpp  Intersectiontest.h  PositionAutomaton.cpp  PositionAutomaton.h
cpp_implementation/Solver/String/: regexp_symbolic.cpp  regexp_symbolic.h  regexp_symbolic_Completment.cpp  regexp_symbolic_follow.cpp  regexp_symbolic_inclusion.cpp  regexp_symbolic_intersection.cpp  regexp_symbolic_intersectionK.cpp
cpp_implementation/Test/: Test.py  Verified.py  make_regexes.py  query.py
cpp_implementation/Utils/: Process_data.py  read.py
theories/: dune
theories/Ambiguity/: DegreeofAmbiguity.v  DegreeofInfiniteAmbiguity.v
theories/Automata/: EpsilonNFA.v  Equivalence.v  PositionAutomaton.v  PositionCorrectness.v
theories/Core/: GraphAlgorithms.v  Sets.v  Syntax.v
theories/Demos/: Examples.v  PaperExamples.v
theories/Experiments/: TmpComputeEta.v  TmpDemo.v
theories/Grammar/: RightLinearGrammar.v
theories/Interop/: LindenBridge.v
theories/Regex/: Algorithm2Drance.v  Algorithm2Foliance.v  KleeneSemantics.v  ReachAmbiguityDrance.v  ReachAmbiguityFoliance.v  RegexReDoS.v  RegexSSS.v  SigmaBlankIdentity.v
theories/Section4/: Section4Examples.v  Section4LR.v  Section4PaperOrder.v
